--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "crossfitapp-backend",
   "version": "1.0.0",
-  "main": "src.server.js",
+  "main": "src/server.js",
   "scripts": {
     "dev": "nodemon src/server.js",
     "start": "node src/server.js"
