--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "crossfitapp-backend",
   "version": "1.0.0",
   "main": "src/server.js",
+  "engines": {
+    "node": "14.17",
+    "yarn": "1.22"
+  },
   "scripts": {
     "dev": "nodemon src/server.js",
     "start": "node src/server.js"
